# fastapi_pt_Ramon

./: .env  ARCHITECTURE.md  README.md  REFACTORING.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  test_admin_premium.py  testdatabase.py
alembic/: env.py
alembic/versions/: 1ac6b76e3497_first_migration_creating_basic_tables.py  400b4fc40c5f_seeder.py  4f1379a2c7b2_add_owner_id_to_tags.py  822e5e1b8e02_first_migration.py  d593bd9233d9_create_users_table.py
app/: main.py
app/core/: config.py  deps.py  rate_limiting.py  security.py
app/db/: base.py  services.py
app/models/: __init__.py  crud.py  post.py  post_tags.py  posts.py  tag.py  tags.py  timestamp.py  timestampmixin.py  user.py  visibilitymixin.py
app/routers/: admin.py  auth.py  posts.py  premium.py  tags.py  user.py
app/schemas/: post.py  tag.py  timestampmixin.py  user.py  visibilitymixin.py
